{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 25,
  "lineage": "6067aa17-9884-98b9-094a-16c03b5fde1f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:network-acl/acl-0f29db31df3b09e7b",
            "default_network_acl_id": "acl-0f29db31df3b09e7b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f29db31df3b09e7b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "998516096174",
            "subnet_ids": [
              "subnet-024c6fbfc46823b4f",
              "subnet-07368f3642e5429e2",
              "subnet-0a30aab2c4b901a67",
              "subnet-0a5e4342b302e5aae",
              "subnet-0b3138030ee41181f",
              "subnet-0f315ca562f3238ca"
            ],
            "tags": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:route-table/rtb-01e0d7f05bd9ec8e6",
            "default_route_table_id": "rtb-01e0d7f05bd9ec8e6",
            "id": "rtb-01e0d7f05bd9ec8e6",
            "owner_id": "998516096174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:security-group/sg-0140f9a2517165917",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0140f9a2517165917",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "998516096174",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-default",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92062851a51a5e9",
            "association_id": "eipassoc-04c77bd32e1796318",
            "domain": "vpc",
            "id": "eipalloc-0f92062851a51a5e9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03a5f231176e86e63",
            "private_dns": "ip-10-0-4-118.ec2.internal",
            "private_ip": "10.0.4.118",
            "public_dns": "ec2-44-205-30-104.compute-1.amazonaws.com",
            "public_ip": "44.205.30.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bitbucket-test-vpc-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:internet-gateway/igw-00cf22a3b1552f16c",
            "id": "igw-00cf22a3b1552f16c",
            "owner_id": "998516096174",
            "tags": {
              "Name": "bitbucket-test-vpc",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f92062851a51a5e9",
            "association_id": "eipassoc-04c77bd32e1796318",
            "connectivity_type": "public",
            "id": "nat-060775c0751b4a69b",
            "network_interface_id": "eni-03a5f231176e86e63",
            "private_ip": "10.0.4.118",
            "public_ip": "44.205.30.104",
            "subnet_id": "subnet-0a30aab2c4b901a67",
            "tags": {
              "Name": "bitbucket-test-vpc-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06a23ab19d9263ad41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-060775c0751b4a69b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a23ab19d9263ad4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00cf22a3b1552f16c",
            "id": "r-rtb-0fd635280e4a7b01f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd635280e4a7b01f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:route-table/rtb-06a23ab19d9263ad4",
            "id": "rtb-06a23ab19d9263ad4",
            "owner_id": "998516096174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060775c0751b4a69b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bitbucket-test-vpc-private",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-private",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:route-table/rtb-0fd635280e4a7b01f",
            "id": "rtb-0fd635280e4a7b01f",
            "owner_id": "998516096174",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cf22a3b1552f16c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bitbucket-test-vpc-public",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-public",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0055eb0fd3af56028",
            "route_table_id": "rtb-06a23ab19d9263ad4",
            "subnet_id": "subnet-024c6fbfc46823b4f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b20a84e0bb9459",
            "route_table_id": "rtb-06a23ab19d9263ad4",
            "subnet_id": "subnet-07368f3642e5429e2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f5aa0f110b7fbf0",
            "route_table_id": "rtb-06a23ab19d9263ad4",
            "subnet_id": "subnet-0b3138030ee41181f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a8a335b642e7d51",
            "route_table_id": "rtb-0fd635280e4a7b01f",
            "subnet_id": "subnet-0a30aab2c4b901a67"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077197aaac75710c6",
            "route_table_id": "rtb-0fd635280e4a7b01f",
            "subnet_id": "subnet-0f315ca562f3238ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0b2ce4acc69270d",
            "route_table_id": "rtb-0fd635280e4a7b01f",
            "subnet_id": "subnet-0a5e4342b302e5aae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-024c6fbfc46823b4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024c6fbfc46823b4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-private-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-private-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-07368f3642e5429e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07368f3642e5429e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-private-us-east-1b",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-private-us-east-1b",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-0b3138030ee41181f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3138030ee41181f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-private-us-east-1c",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-private-us-east-1c",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-0a30aab2c4b901a67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30aab2c4b901a67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-public-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-public-us-east-1a",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-0f315ca562f3238ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f315ca562f3238ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-public-us-east-1b",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-public-us-east-1b",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:subnet/subnet-0a5e4342b302e5aae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5e4342b302e5aae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998516096174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bitbucket-test-vpc-public-us-east-1c",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc-public-us-east-1c",
              "kubernetes.io/cluster/bitbucket-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-062b787ae2d5c4740"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:998516096174:vpc/vpc-062b787ae2d5c4740",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f29db31df3b09e7b",
            "default_route_table_id": "rtb-01e0d7f05bd9ec8e6",
            "default_security_group_id": "sg-0140f9a2517165917",
            "dhcp_options_id": "dopt-023146067938421a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062b787ae2d5c4740",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e0d7f05bd9ec8e6",
            "owner_id": "998516096174",
            "tags": {
              "Name": "bitbucket-test-vpc",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            },
            "tags_all": {
              "Name": "bitbucket-test-vpc",
              "kubernetes.io/cluster/bitbucket-test": "shared"
            }
          }
        }
      ]
    }
  ]
}